--- a/app/src/main/res/layout/team_preview.xml
+++ b/app/src/main/res/layout/team_preview.xml
@@ -1,63 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp">
+        android:layout_height="80dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="7dp"
+            android:background="@drawable/border_list_price"
+            android:gravity="center"
             android:orientation="horizontal"
-            android:weightSum="10">
+            android:weightSum="9.2">
+
+            <TextView
+                android:id="@+id/country"
+                android:layout_width="30dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="top"
+                android:layout_weight=".2"
+                android:drawableTop="@drawable/ic_baseline_info_24"
+                android:gravity="center"
+                android:maxLines="1"
+                android:textColor="@color/black"
+                android:textSize="9sp"
+                android:textStyle="bold" />
 
             <ImageView
                 android:id="@+id/playerImg"
                 android:layout_width="55dp"
                 android:layout_height="60dp"
-                android:layout_weight="3" />
+                android:src="@drawable/ic_baseline_person_3" />
 
             <TextView
                 android:id="@+id/playerName"
-                android:layout_width="55dp"
+                android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1" />
+                android:layout_gravity="center"
+                android:layout_weight="3"
+                android:gravity="left"
+                android:maxLines="1"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="left"
+                android:maxLines="1"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                android:textStyle="bold" />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="2" />
+                android:layout_weight="3" />
 
             <RadioGroup
                 android:id="@+id/radioGrp"
-                android:layout_width="0dp"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"
+                android:layout_weight="2"
                 android:orientation="horizontal">
 
                 <RadioButton
                     android:id="@+id/radioM"
-                    android:layout_width="0dp"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left"
-                    android:layout_weight="2"
-                    android:checked="true"
+                    android:layout_weight="1"
+                    android:gravity="center"
                     android:text="C"
-                    android:textSize="14dp" />
+                    android:textSize="17sp" />
 
                 <RadioButton
                     android:id="@+id/radioF"
-                    android:layout_width="0dp"
+                    android:layout_width="50dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="right"
-                    android:layout_weight="2"
-                    android:checked="false"
+                    android:layout_weight="1"
+                    android:gravity="center"
                     android:text="VC"
-                    android:textSize="14dp" />
+                    android:textSize="17sp" />
 
             </RadioGroup>
 
